--- a/geral.html
+++ b/geral.html
@@ -249,16 +249,17 @@
 
                 <div class="row col-md-12" style="margin:15px;border: 1px solid black">
                     <div class="col-md-6">
-                        <h3>Dificultades para dormir :</h3>
-                        <label class="container">Dificuldade para iniciar o sono.
+                        <h3>Alimentação :</h3>
+                        <label class="container">Episódios de descontrole alimentar:
                             <input type="checkbox" >
                             <span class="checkmark"></span>
                           </label>
-                        <label class="container">Acorda durante a noite.
+                        <label class="container">Ingesta vária em situações de tristeza,
+                            nervosismo, estresse ou ansiedade: 
                             <input type="checkbox" >
                             <span class="checkmark"></span>
                           </label>
-                        <label class="container">Acordar pela manhã antes do tempo desejado e não continuar o sono.
+                        <label class="container">Usou medicamentos para baixar de peso:
                             <input type="checkbox" >
                             <span class="checkmark"></span>
                           </label>
@@ -272,7 +273,7 @@
                                 <input type="checkbox" >
                                 <span class="checkmark"></span>
                               </label>
-                        <label class="container">Frequência de pesadelos ou terrores noturnos.
+                        <label class="container">Vómitos autoinduzidos: 
                                 <input type="checkbox" >
                                 <span class="checkmark"></span>
                               </label>
