--- a/geral.html
+++ b/geral.html
@@ -36,6 +36,7 @@
     textarea {
         border-color: cornflowerblue;
         border-radius: 5px;
+        height: 100px;
     }
     
     h1,
@@ -243,6 +244,7 @@
 
             <button class="btn btn-lg btn-success ">Salvar</button>
         </form>
+    </div>
 </body>
 
 </html>
